--- a/DesarrolloSocialWeb/Views/About/RegistroGestor.cshtml
+++ b/DesarrolloSocialWeb/Views/About/RegistroGestor.cshtml
@@ -10,7 +10,10 @@
     var urlCrearRegistroGestor = '@Url.Action("CrearRegistroGestor","About")';
       var urlPaises = '@Url.Action("GetPaises","Home")';
     var urlCiudadesPais = '@Url.Action("GetCiudadesPais","Home")';
+    var urlLogin = '@Url.Action("Index","Login")';
 </script>
+
+
 
 
 
