--- a/DesarrolloSocialWeb/Views/Login/Index.cshtml
+++ b/DesarrolloSocialWeb/Views/Login/Index.cshtml
@@ -8,6 +8,7 @@
 <script>
     var urlLogin = '@Url.Action("LoginGestor","Login")';
     var urlRegistroGestor = '@Url.Action("RegistroGestor","About")';
+    var urlPrincipal = '@Url.Action("Registro","Home")';
 </script>
 
 <div class="card" style="margin-top:5%;">
