--- a/DesarrolloSocialWeb/Views/Home/CorredorHumanitario.cshtml
+++ b/DesarrolloSocialWeb/Views/Home/CorredorHumanitario.cshtml
@@ -27,31 +27,35 @@
                     <label class="control-label">¿Expresa Voluntad de Regresar a su País Origen?</label>
                  </div>
                 <div class="col-md-8">
-                    <select id="regresar"><option value="0" selected  disabled>Seleccionar</option><option value="1">Si</option><option value="2">No</option></select>
+                    <select id="regresar" class="form form-control" ><option value="0" selected  disabled>Seleccionar</option><option value="1">Si</option><option value="2">No</option></select>
                 </div>
+
+            <br />
 
                  <div class="col-md-3 text-md-right">
                     <label class="control-label">¿Posee Vivienda En El País de Origen?</label>
                  </div>
                 <div class="col-md-8">
-                    <select id="paìsorigen"><option value="0" selected  disabled>Seleccionar</option><option value="1">Si</option><option value="2">No</option></select>
+                    <select id="paìsorigen" class="form form-control"><option value="0" selected  disabled>Seleccionar</option><option value="1">Si</option><option value="2">No</option></select>
                 </div>
+            <br />
 
                 <div class="col-md-3 text-md-right">
                     <label class="control-label">¿Tiene un Lugar de Arrivo?</label>
                  </div>
                 <div class="col-md-8">
-                    <select id="lugarArrivo"><option value="0" selected  disabled>Seleccionar</option><option value="1">Si</option><option value="2">No</option></select>
+                <select id="lugarArrivo" class="form form-control"><option value="0" selected disabled>Seleccionar</option><option value="1">Si</option><option value="2">No</option></select>
                 </div>
+            <br />
 
                  <div class="col-md-3 text-md-right">
                     <label class="control-label">¿Necesita Asilo? </label>
                  </div>
                 <div class="col-md-8">
-                    <select id="necesitaAsilo"><option value="0" selected  disabled>Seleccionar</option><option value="1">Si</option><option value="2">No</option></select>
+                <select id="necesitaAsilo" class="form form-control"><option value="0" selected disabled>Seleccionar</option><option value="1">Si</option><option value="2">No</option></select>
                 </div>
 
-
+            <br />
                  
                 <div class="col-md-3 text-md-right">
 
