--- a/DesarrolloSocialWeb/Views/Home/Registro.cshtml
+++ b/DesarrolloSocialWeb/Views/Home/Registro.cshtml
@@ -19,7 +19,7 @@
                 <div class="col-md-3 text-md-right">
                     <label class="control-label" style=";font-weight:bold;font-size:16px;">Fecha de Registro</label>
                 </div>
-                <div class="col-md-3">                   
+                <div class="col-md-2">                   
                     <input type="date" id="fechaRegistro" name="fechaRegistro" class="form form-control" />
                 </div>
 
@@ -28,6 +28,7 @@
                     <label class="control-label" style=";font-weight:bold;font-size:16px;">Dirección de Domicilio</label>
                 </div>
 
+            <br />
 
                 <div class="col-md-3 text-md-right">
                     <label class="control-label">País</label>
@@ -127,7 +128,7 @@
                     <input type="text" id="codigo" name="codigo" class="form form-control" placeholder="+58" />
                 </div>
 
-               <div class="col-md-3 text-md-right">
+               <div class="col-md-2 text-md-right">
                     <input type="text" id="telefono" name="telefono" class="form form-control" placeholder="424-331-21-31"/>
                 </div>
 
@@ -146,7 +147,7 @@
                     <input type="text" id="codigo" name="codigo" class="form form-control" placeholder="+58"  />
                 </div>
 
-                 <div class="col-md-3 text-md-right">
+                 <div class="col-md-2 text-md-right">
                     <input type="text" id="telefono.alternativo" name="telefono.alternativo" class="form form-control" placeholder="424-331-21-31" />
                 </div>
 
@@ -154,7 +155,7 @@
 
 
                 <div class="col-md-4 text-md-right">
-                    <label class="control-label">Correo Electronico</label>
+                    <label class="control-label">Correo Electrónico</label>
                 </div>
                   <div class="col-md-4">
                     <input type="email" id="correo" name="correo" class="form form-control" placeholder="example@gmail.com" /> 
