--- a/DesarrolloSocialWeb/Views/Home/CargaFamiliar.cshtml
+++ b/DesarrolloSocialWeb/Views/Home/CargaFamiliar.cshtml
@@ -27,7 +27,12 @@
                 <label class="control-label">¿Los Niños y Adolescentes en Edad Escolar Estudian?</label>
           </div>
              <div class="col-md-8">
-              <select id="estudian"><option value="0" selected  disabled>Seleccionar</option><option value="1">Si</option><option value="2">No</option></select>
+              <select id="estudian">
+                  <option value="0" selected  disabled>Seleccionar</option>
+                  <option value="1">Si</option>
+                  <option value="2">No</option>
+                  <option value="2">Otro</option>
+              </select>
 
              </div>
    
