--- a/DesarrolloSocialWeb/Views/Home/ResponsabledeFamilia.cshtml
+++ b/DesarrolloSocialWeb/Views/Home/ResponsabledeFamilia.cshtml
@@ -123,7 +123,7 @@
                 <label class="control-label">Estado Civil</label>
           </div>
            <div class="col-md-8">
-            <select id="sexo"name="sexo" class="form-control form-control-sm">
+            <select id="estadoCivil"name="estadoCivil" class="form-control form-control-sm">
                          <option value="0" disabled  selected >Seleccione...</option>
                          <option value="1">Soltero (a)</option>
                          <option value="2">Casado (a)</option>  
@@ -138,7 +138,7 @@
                 <label class="control-label">Nivel de Instrucción</label>
           </div>
            <div class="col-md-8">
-            <select id="sexo"name="sexo" class="form-control form-control-sm">
+                <select id="nivelInstruccion" name="nivelInstruccion" class="form-control form-control-sm">
                          <option value="0" disabled  selected >Seleccione...</option>
                          <option value="1">Primaria</option>
                          <option value="2">Secundaria</option>  
@@ -169,7 +169,7 @@
                 <label class="control-label">Trabaja Actualmente</label>
           </div>
            <div class="col-md-8">
-            <select id="sexo"name="sexo" class="form-control form-control-sm">
+            <select id="trabaja"name="trabaja" class="form-control form-control-sm">
                          <option value="0" disabled  selected >Seleccione...</option>
                          <option value="1">Si</option>
                          <option value="2">No</option>  
@@ -179,11 +179,11 @@
 
 
                  <div class="col-md-8">
-                <label class="control-label">Habilidades y Destrezas</label>
+                <label class="control-label">Condición laboral</label>
           </div>
 
                <div class="col-md-8">
-            <select id="sexo"name="sexo" class="form-control form-control-sm">
+            <select id="condicionlaboral"name="condicionlaboral" class="form-control form-control-sm">
                          <option value="0" disabled  selected >Seleccione...</option>
                          <option value="1">Dependiente</option>
                          <option value="2">Independiente</option>  
@@ -195,7 +195,7 @@
                 <label class="control-label">Especifique el Tipo de Negocio Actual</label>
           </div>
            <div class="col-md-8">
-            <select id="sexo"name="sexo" class="form-control form-control-sm">
+            <select id="tipodenegocio"name="tipodenegocio" class="form-control form-control-sm">
                          <option value="0" disabled  selected >Seleccione...</option>
                          <option value="1">Formal</option>
                          <option value="2">Informal</option>  
@@ -214,7 +214,7 @@
                 <label class="control-label">¿Tiene Hijos?</label>
           </div>
            <div class="col-md-8">
-            <select id="sexo"name="sexo" class="form-control form-control-sm">
+            <select id="tienehijos"name="tienehijos" class="form-control form-control-sm">
                          <option value="0" disabled  selected >Seleccione...</option>
                          <option value="1">Si</option>
                          <option value="2">No</option>  
@@ -226,7 +226,7 @@
                 <label class="control-label">Nº de Hijos</label>
             </div>
             <div class="col-md-8">
-                <input type="number" id="cantidad" step="1" min="1" max="25" />
+                <input type="text" id="cantidad" step="1" min="1" max="25" />
             </div>
 
                 <div class="col-md-8">
@@ -246,7 +246,7 @@
                 <label class="control-label">Tipo Discapacidad</label>
           </div>
             <div class="col-md-8">
-                <select id="discapacidad" name="discapacidad" class="form-control form-control-sm" onchange="    MostrarDiscapacidad();">
+                <select id="tipodiscapacidad" name="tipodiscapacidad" class="form-control form-control-sm" onchange="    MostrarDiscapacidad();">
                          <option value="0" disabled  selected >Seleccione Tipo ..</option>
                          <option value="1">Psiquica (Mental, Intelectual)</option>
                          <option value="2">Sensorial (Visual,Auditiva,Lenguaje)</option>  
@@ -261,7 +261,7 @@
                 <label class="control-label">¿Tiene Tratamiento o Terapia?</label>
           </div>
             <div class="col-md-8">
-            <select id="sexo"name="sexo" class="form-control form-control-sm">
+            <select id="tratamiento-"name="tratamiento" class="form-control form-control-sm">
                          <option value="0" disabled  selected >Seleccione Tratamiento...</option>
                          <option value="1">Si</option>
                          <option value="2">No</option>  
@@ -276,7 +276,7 @@
                 <label class="control-label">¿Padece de Alguna Enfermedad?</label>
           </div>
              <div class="col-md-8">
-            <select id="sexo"name="sexo" class="form-control form-control-sm">
+            <select id="padecedeenfermedad"name="padecedeenfermedad" class="form-control form-control-sm">
                          <option value="0" disabled  selected >Seleccione...</option>
                          <option value="1">Si</option>
                          <option value="2">No</option>  
@@ -296,7 +296,7 @@
           </div>
           
              <div class="col-md-2">
-            <select id="sexo"name="sexo" class="form-control form-control-sm">
+            <select id="tienetratamiento"name="tienetratamiento" class="form-control form-control-sm">
                          <option value="0" disabled  selected >Seleccione...</option>
                          <option value="1">Si</option>
                          <option value="2">No</option>  
