--- a/DesarrolloSocialWeb/Views/Home/SoloParaUsodelGestorylaFundacion.cshtml
+++ b/DesarrolloSocialWeb/Views/Home/SoloParaUsodelGestorylaFundacion.cshtml
@@ -70,16 +70,22 @@
                     <label class="control-label">Telefono del G.H</label>
                 </div>
 
-                 <div class="form-group row col-md-12">
-        <div class="col-md-1 text-md-left">
-                    <input type="text" id="codigo" name="codigo" class="form form-control" placeholder="+58" />
+                <div class="col-md-3 text-md-right">
+                    <label class="control-label">Telefono</label>
                 </div>
 
-               <div class="col-md-7 text-md-right">
-                    <input type="text" id="telefono" name="telefono" class="form form-control" placeholder="424-331-21-31"/>
+                <div class="form-group row col-md-12">
+
+                    <div class="col-md-2 text-md-left">
+                        <input type="text" id="codigo" name="codigo" class="form form-control" placeholder="+58" />
+                    </div>
+
+                    <div class="col-md-3 text-md-right">
+                        <input type="text" id="telefono" name="telefono" class="form form-control" placeholder="424-331-21-31" />
+                    </div>
+
+
                 </div>
-             </div>
-            
                <br />
 
                   <div class="col-md-6 tex-md-rigth">
