--- a/DesarrolloSocialWeb/Views/Home/CorredorHumanitario.cshtml
+++ b/DesarrolloSocialWeb/Views/Home/CorredorHumanitario.cshtml
@@ -36,7 +36,7 @@
                     <label class="control-label">¿Posee Vivienda En El País de Origen?</label>
                  </div>
                 <div class="col-md-8">
-                    <select id="paìsorigen" class="form form-control"><option value="0" selected  disabled>Seleccionar</option><option value="1">Si</option><option value="2">No</option></select>
+                    <select id="ViviendaPaìsOrigen" class="form form-control"><option value="0" selected  disabled>Seleccionar</option><option value="1">Si</option><option value="2">No</option></select>
                 </div>
             <br />
 
