--- a/DesarrolloSocialWeb/Views/Home/Registro.cshtml
+++ b/DesarrolloSocialWeb/Views/Home/Registro.cshtml
@@ -64,15 +64,15 @@
                     <label class="control-label">Codigo Postal</label>
                 </div>
                   <div class="col-md-8">
-                    <input type="text" id="codigo postal" name="codigo postal" class="form form-control" />
+                    <input type="text" id="codigoPostal" name="codigoPostal" class="form form-control" />
                 </div>
 
             
                  <div class="col-md-3 text-md-right">
-                    <label class="control-label">Parroquia/Distrito</label>
+                    <label class="control-label">Parroquia/UrbanizacionDistrito</label>
                 </div>
                   <div class="col-md-8">
-                    <input type="text" id="parroquia_dist" name="parroquia_dist" class="form form-control" />
+                    <input type="text" id="parroquiaDist" name="parroquiaDist" class="form form-control" />
                 </div>
 
                 
@@ -94,11 +94,11 @@
                     <label class="control-label">Edificio/Casa</label>
                 </div>
                   <div class="col-md-8">
-                    <input type="text" id="edificio_casa" name="edificio_casa" class="form form-control" />
+                    <input type="text" id="edificioCasa" name="edificioCasa" class="form form-control" />
                 </div>
 
                  <div class="col-md-3 text-md-right">
-                    <label class="control-label">Piso</label>
+                <label class="control-label">Piso</label> var Urbanizacion = $('#urbanizacion').val();
                 </div>
                   <div class="col-md-8">
                     <input type="text" id="piso" name="piso" class="form form-control" />
@@ -115,7 +115,7 @@
                     <label class="control-label">Punto de Referencia</label>
                 </div>
                   <div class="col-md-8">
-                    <input type="text" id="puntodereferencia" name="puntodereferencia" class="form form-control" />
+                    <input type="text" id="puntodeReferencia" name="puntodeReferencia" class="form form-control" />
                 </div>
                   
                  <div class="col-md-3 text-md-right">
@@ -148,7 +148,7 @@
                 </div>
 
                  <div class="col-md-2 text-md-right">
-                    <input type="text" id="telefono.alternativo" name="telefono.alternativo" class="form form-control" placeholder="424-331-21-31" />
+                    <input type="text" id="telefonoAlternativo" name="telefonoAlternativo" class="form form-control" placeholder="424-331-21-31" />
                 </div>
 
                  </div>
