--- a/DesarrolloSocialWeb/Views/About/RegistroGestor.cshtml
+++ b/DesarrolloSocialWeb/Views/About/RegistroGestor.cshtml
@@ -225,7 +225,7 @@
                     <input type="reset" value="Cancelar" class="btn btn-danger form-control" onclick="" style="width:300px;" />
                 </div>
                  <div class="col-md-6 tex-md-right">
-                    <input type="button" value="Guardar" class="btn btn-success form-control" onclick="RegistroGestores();"style="width:300px;" />
+                    <input type="button" value="Guardar" class="btn btn-primary form-control" onclick="RegistroGestores();"style="width:300px;" />
                 </div>
 
 
