--- a/DesarrolloSocialWeb/Views/Home/Registro.cshtml
+++ b/DesarrolloSocialWeb/Views/Home/Registro.cshtml
@@ -97,8 +97,8 @@
                     <input type="text" id="edificioCasa" name="edificioCasa" class="form form-control" />
                 </div>
 
-                 <div class="col-md-3 text-md-right">
-                <label class="control-label">Piso</label> var Urbanizacion = $('#urbanizacion').val();
+            <div class="col-md-3 text-md-right">
+                <label class="control-label">Piso</label>
                 </div>
                   <div class="col-md-8">
                     <input type="text" id="piso" name="piso" class="form form-control" />
@@ -170,7 +170,7 @@
                 </div>
 
                  <div class="col-md-6 tex-md-right">
-                    <input type="button" value="Siguiente" class="btn btn-success form-control" onclick=""style="width:300px;" />
+                    <input type="button" value="Siguiente" class="btn btn-primary form-control" onclick=""style="width:300px;" />
                 </div>
 
             </div>
