--- a/DesarrolloSocialWeb/Views/Home/SoloParaUsodelGestorylaFundacion.cshtml
+++ b/DesarrolloSocialWeb/Views/Home/SoloParaUsodelGestorylaFundacion.cshtml
@@ -89,7 +89,7 @@
                <br />
 
                   <div class="col-md-6 tex-md-rigth">
-                    <input type="button" value="Enviar" class="btn btn-success form-control" onclick=""style="width:300px;" />
+                    <input type="button" value="Enviar" class="btn btn-primary form-control" onclick=""style="width:300px;" />
                 </div>
 
 </div> 
