--- a/DesarrolloSocialWeb/Views/Login/Index.cshtml
+++ b/DesarrolloSocialWeb/Views/Login/Index.cshtml
@@ -43,7 +43,7 @@
                     <label class="control-label">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</label>
                 </div>
                 <div class="col-md-8">
-                    <input type="button" value="Aceptar" class="btn btn-success form-control" onclick="Login();" />
+                    <input type="button" value="Aceptar" class="btn btn-primary form-control" onclick="Login();" />
                 </div>
                 <div class="col-md-6 text-md-right" style="display:none;">
                     <input type="reset" value="Cancelar" class="btn btn-danger form-control" onclick="Reset()" style="width:200px;" />
