--- a/DesarrolloSocialWeb/Views/Shared/_sidebar.cshtml
+++ b/DesarrolloSocialWeb/Views/Shared/_sidebar.cshtml
@@ -66,8 +66,8 @@
     <ul class="nav nav-height">
         <li class="nav-item nav-profile border-bottom">
             <a href="#" class="nav-link flex-column">
-                <div class="nav-profile-image">
-                    <img src="~/Content/img/logo-e.png" alt="profile">
+                <div class="">
+                    <img src="~/Content/img/logofinal.png" alt="profile" style="width:150px;height:160px">
                     <!--change to offline or busy as needed-->
                 </div>
                 <div class="nav-profile-text d-flex ms-0 mb-3 flex-column">
