--- a/DesarrolloSocialWeb/Views/Home/ResponsabledeFamilia.cshtml
+++ b/DesarrolloSocialWeb/Views/Home/ResponsabledeFamilia.cshtml
@@ -318,7 +318,7 @@
                     <input type="reset" value="Atras" class="btn btn-danger form-control" onclick="" style="width:300px;" />
                 </div>
                  <div class="col-md-6 tex-md-right">
-                    <input type="button" value="Siguiente" class="btn btn-success form-control" onclick=""style="width:300px;" />
+                    <input type="button" value="Siguiente" class="btn btn-primary form-control" onclick=""style="width:300px;" />
                 </div>
             </div>
 
