--- a/DesarrolloSocialWeb/Views/Login/Index.cshtml
+++ b/DesarrolloSocialWeb/Views/Login/Index.cshtml
@@ -1,5 +1,5 @@
 ﻿@{
-    Layout = "~/Views/Shared/_Layout.cshtml";
+    Layout = null;
     <script src="~/lib/jquery/dist/jquery.min.js"></script>
     <script src="~/js/scriptsSite/jsLogin/jsIndex.js"></script>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/toastr.js/latest/toastr.css" integrity="sha512-3pIirOrwegjM6erE5gPSwkUzO+3cTjpnV9lexlNZqvupR64iZBnOOTiiLPb9M36zpMScbmUNIcHUqKD47M719g==" crossorigin="anonymous" referrerpolicy="no-referrer" />
@@ -11,9 +11,71 @@
     var urlPrincipal = '@Url.Action("Registro","Home")';
 </script>
 
-<div class="card" style="margin-top:5%;">
-    <div class="card-body">
-        <div class="form-horizontal" style="color:dimgray">
+<style>
+    body, html {
+        height: 100%;
+    }
+
+    * {
+        box-sizing: border-box;
+    }
+
+    .bg-img {
+        /* The image used */
+        background-image: url("../content/img/MUNDO2.png");
+        /* Control the height of the image */
+        min-height: 100%;
+        /* Center and scale the image nicely */
+        background-position: center;
+        background-repeat: no-repeat;
+        background-size: cover;
+        position: relative;
+    }
+
+    /* Add styles to the form container */
+    .container {
+        position: absolute;
+        right: 0;
+        margin: 20px;
+        max-width: 300px;
+        padding: 16px;
+        background-color: white;
+    }
+
+    /* Full-width input fields */
+    input[type=text], input[type=password] {
+        width: 100%;
+        padding: 15px;
+        margin: 5px 0 22px 0;
+        border: none;
+        background: #f1f1f1;
+    }
+
+        input[type=text]:focus, input[type=password]:focus {
+            background-color: #ddd;
+            outline: none;
+        }
+
+    /* Set a style for the submit button */
+    .btn {
+        background-color: #1111E3;
+        color: white;
+        padding: 16px 20px;
+        border: none;
+        cursor: pointer;
+        width: 100%;
+        opacity: 0.9;
+    }
+
+        .btn:hover {
+            opacity: 1;
+        }
+
+    </style >
+
+<body>
+    <div class="bg-img">
+        <div class="container">
             <h1 style="color:dimgray"> Acceso </h1>
             <small class="mb-md-0 text-gray">Hola Comenzemos</small>
             <div class="form-group row">
@@ -31,7 +93,7 @@
                 </div>
 
                 <div class="col-md-3 text-md-right">
-                    <input type="checkbox" id="confirmar" class="form-check-input" > <br>
+                    <input type="checkbox" id="confirmar" class="form-check-input"> <br>
                 </div>
                 <div class="col-md-2">
                     <label class="control-label">Confirmar</label>
@@ -49,15 +111,21 @@
                     <input type="reset" value="Cancelar" class="btn btn-danger form-control" onclick="Reset()" style="width:200px;" />
                 </div>
             </div>
-               
-             <br /><br />
-                 <div class="text-center">
-                      <div class="col-md-3 ">
-                         <a href='@Url.Action("RegistroGestor","About")'>¿Eres gestor? Registrate, Aqui..</a>
-                      </div> 
-                  </div>
+
+            <br /><br />
+            <div class="text-center">
+                <div class="col-md-3 ">
+                    <a href='@Url.Action("RegistroGestor","About")'>¿Eres gestor? Registrate, Aqui..</a>
+                </div>
+            </div>
 
         </div>
     </div>
-</div>
+</body>
+
+
+
+
+
+
 
