--- a/DesarrolloSocialWeb/Views/Home/Registro.cshtml
+++ b/DesarrolloSocialWeb/Views/Home/Registro.cshtml
@@ -9,12 +9,15 @@
 <script>
     var urlPaises = '@Url.Action("GetPaises","Home")';
     var urlCiudadesPais = '@Url.Action("GetCiudadesPais","Home")';
+    var urlCrearDatosPrincipalesRG = '@Url.Action("CrearDatosPrincipalesRG","Home")';
+    
+
 </script>
 
 
 <div class="card" style="margin-top:5%;">
     <div class="card-body">
-        <div class="form-horizontal" style="color:dD8CDCA">
+        <div class="form-horizontal" style="color:black">
 
                 <div class="col-md-3 text-md-right">
                     <label class="control-label" style=";font-weight:bold;font-size:16px;">Fecha de Registro</label>
@@ -170,7 +173,7 @@
                 </div>
 
                  <div class="col-md-6 tex-md-right">
-                    <input type="button" value="Siguiente" class="btn btn-primary form-control" onclick=""style="width:300px;" />
+                    <input type="button" value="Siguiente" class="btn btn-primary form-control" onclick="CrearDatosPrincipalesRG();" style="width:300px;" />
                 </div>
 
             </div>
