--- a/DesarrolloSocialWeb/Views/Home/Registro.cshtml
+++ b/DesarrolloSocialWeb/Views/Home/Registro.cshtml
@@ -147,7 +147,7 @@
 
 
                   <div class="col-md-1 text-md-left">
-                    <input type="text" id="codigo" name="codigo" class="form form-control" placeholder="+58"  />
+                    <input type="text" id="codigo2" name="codigo2" class="form form-control" placeholder="+58"  />
                 </div>
 
                  <div class="col-md-2 text-md-right">
