--- a/DesarrolloSocialWeb/Views/Home/ResponsabledeFamilia.cshtml
+++ b/DesarrolloSocialWeb/Views/Home/ResponsabledeFamilia.cshtml
@@ -9,7 +9,7 @@
 
 <div class="card" style="margin-top:5%;">
     <div class="card-body">
-        <div class="form-horizontal" style="olor:dD8CDCA">
+        <div class="form-horizontal" style="color:dD8CDCA">
 
        
 
