--- a/DesarrolloSocialWeb/Views/Home/Registro.cshtml
+++ b/DesarrolloSocialWeb/Views/Home/Registro.cshtml
@@ -20,7 +20,7 @@
         <div class="form-horizontal" style="color:black">
 
                 <div class="col-md-3 text-md-right">
-                    <label class="control-label" style=";font-weight:bold;font-size:16px;">Fecha de Registro</label>
+                    <label class="control-label" style="font-weight:bold;font-size:16px;">Fecha de Registro</label>
                 </div>
                 <div class="col-md-2">                   
                     <input type="date" id="fechaRegistro" name="fechaRegistro" class="form form-control" />
@@ -28,7 +28,7 @@
 
                 
                 <div class="col-md-3 text-md-right">
-                    <label class="control-label" style=";font-weight:bold;font-size:16px;">Dirección de Domicilio</label>
+                    <label class="control-label" style="font-weight:bold;font-size:16px;">Dirección de Domicilio</label>
                 </div>
 
             <br />
