--- a/DesarrolloSocialWeb/Views/About/RegistroGestor.cshtml
+++ b/DesarrolloSocialWeb/Views/About/RegistroGestor.cshtml
@@ -20,7 +20,7 @@
 <div class="card" style="margin-top:5%;">
     <div class="card-body">
         <div class="form-horizontal" style="color:black">
-<h1>Nuevo Gestor</h1>
+<h1>Nuevo Encuestador</h1>
 
               <div class="col-md-3 text-md-right">
                 <label class="control-label">Nombres</label>
