--- a/DesarrolloSocialWeb/Views/Login/Index.cshtml
+++ b/DesarrolloSocialWeb/Views/Login/Index.cshtml
@@ -115,7 +115,7 @@
             <br /><br />
             <div class="text-center">
                 <div class="col-md-3 ">
-                    <a href='@Url.Action("RegistroGestor","About")'>¿Eres gestor? Registrate, Aqui..</a>
+                    <a href='@Url.Action("RegistroGestor","About")'>¿Eres Encuestador? Registrate, Aqui..</a>
                 </div>
             </div>
 
