--- a/DesarrolloSocialWeb/Views/Home/Registro.cshtml
+++ b/DesarrolloSocialWeb/Views/Home/Registro.cshtml
@@ -17,7 +17,7 @@
 
 <div class="card" style="margin-top:5%;">
     <div class="card-body">
-        <div class="form-horizontal" style="color:black">
+        <div class="form-horizontal" style="color:#332f2c">
 
                 <div class="col-md-3 text-md-right">
                     <label class="control-label" style="font-weight:bold;font-size:16px;">Fecha de Registro</label>
