--- a/DesarrolloSocialWeb/Views/Home/SoloParaUsodelGestorylaFundacion.cshtml
+++ b/DesarrolloSocialWeb/Views/Home/SoloParaUsodelGestorylaFundacion.cshtml
@@ -41,7 +41,7 @@
              <div class="col-md-12 text-md-right">
   
 
-                <label class="control-label">Nombres y Apellidos de gestor Humanitario</label>
+                <label class="control-label">Nombres y Apellidos del Encuestador</label>
 
  
           </div>
@@ -58,7 +58,7 @@
                <br />
 
            <div class="col-md-3 text-md-right">
-                <label class="control-label">Nº de Identidad del G.H</label>
+                <label class="control-label">Nº de Identidad del E.H</label>
           </div>
              <div class="col-md-8">
                 <input type="text" id="nºidentidad" name="nºidentidad" class="form form-control" />
@@ -67,7 +67,7 @@
                <br />
 
              <div class="col-md-3 text-md-right">
-                    <label class="control-label">Telefono del G.H</label>
+                    <label class="control-label">Telefono del E.H</label>
                 </div>
 
                 <div class="col-md-3 text-md-right">
