--- a/DesarrolloSocialWeb/Views/Home/CargaFamiliar.cshtml
+++ b/DesarrolloSocialWeb/Views/Home/CargaFamiliar.cshtml
@@ -34,9 +34,9 @@
              <div class="col-md-8">
               <select id="niñosEstudian">
                   <option value="0" selected  disabled>Seleccionar</option>
-                  <option value="1">Si</option>
-                  <option value="2">No</option>
-                  <option value="2">Otro</option>
+                  <option value="Si">Si</option>
+                  <option value="No">No</option>
+                  <option value="Otro">Otro</option>
               </select>
 
              </div>
